<resources>
    <string name="app_name">DirecTor</string>
    <string name="title_section_1"> Contacts </string>
    <string name="title_section_2"> Inbox </string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"> </string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local (stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="tor_connect">TOR On</string>
    <string name="tor_disconnect">TOR Off</string>
    <string name="new_identity"> New Identity</string>
    <string name="msg_crash">Exception connecting to hidden service</string>
    <string name="msg_timeout">Orbot not installed or not connected to within 60 seconds</string>
    <string name="msg_invalid">Tor connection is established, but validation failed</string>
    <string name="nfc_button">NFC</string>
    <string name="bt_button">Bluetooth</string>
    <string name="title_alert_dialog">NFC TAG DISCOVERED</string>
    <string name="write_button_label">Write message</string>
    <string name="read_button_label">Read message</string>
    <string name="bt_not_found">Bluetooth not found</string>
    <string name="bt_cancelled">Bluetooth cancelled</string>
    <string name="new_account">New Account</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="send">SEND</string>
    <string name="contact_name">Contact name</string>
    <string name="provide_master_password">Provide master password</string>
    <string name="master_password">MASTER PASSWORD</string>
    <string name="add_contact">Add Contact</string>
    <string name="set_master_password">Set master password</string>
    <string name="confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="please_activate_nfc">Please activate NFC</string>
    <string name="nfc_enabled">NFC enabled</string>
    <string name="nfc_not_supported">NFC feature not supported</string>
    <string name="ready">Ready</string>
</resources>
