<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <item
        android:id="@+id/atn_direct_enable"
        android:icon="@drawable/ic_action_on_off"
        android:title="@string/enable_p2p_button"
        app:showAsAction="ifRoom|withText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <item
        android:id="@+id/atn_direct_discover"
        android:icon="@drawable/ic_action_discover"
        android:title="@string/discover_peers_button"
        app:showAsAction="ifRoom|withText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <item
        android:id="@+id/atn_nfc"
        android:icon="@drawable/ic_nfc"
        android:title="@string/nfc_button"
        app:showAsAction="ifRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <item
        android:id="@+id/atn_bluetooth"
        android:icon="@drawable/ic_bluetooth"
        android:title="@string/bt_button"
        app:showAsAction="ifRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</menu>