<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp" android:layout_height="wrap_content"
    android:padding="2dp"
    android:weightSum="1"
    android:layout_centerInParent="true"
    android:layout_marginBottom="200dp"
    android:background="#7d6b91">
    <TextView
        android:id="@+id/masterPasswordVerification_textView"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:paddingTop="5dp"
        android:background="#5d536b"
        android:text="@string/provide_master_password"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="#e3e4db"/>

    <EditText
        android:id="@+id/masterPasswordVerification_editText"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:hint="@string/master_password"
        android:gravity="center"
        android:layout_below="@+id/masterPasswordVerification_textView"
        android:layout_alignParentStart="true"
        android:inputType="textVisiblePassword" />
    <Button
        android:id="@+id/masterPasswordVerification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/masterPasswordVerification_editText"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"/>
</RelativeLayout>